# zlorb

./: .gitignore  2026-05-23.md  Cargo.toml  README.md  justfile  zlorb.service  zlorbrs.service
.github/issue_template/: bug.md  general.md
zlorb-ctl/: Cargo.toml
zlorb-ctl/src/: configuration.rs  main.rs
zlorb-ctl/src/utils/: daemon.rs  repo.rs
zlorb-lib/: Cargo.toml
zlorb-lib/src/: config.rs  error.rs  git.rs  lib.rs  log.rs
zlorb-service/: Cargo.toml
zlorb-service/src/: config_manager.rs  main.rs  repo_processor.rs  service_config.rs  service_coordinator.rs
zlorb-service/src/build_system_executor/: mod.rs
zlorb-service/src/build_system_executor/managers/: bun.rs  mod.rs  (+2 more)
zlorb-web/: Cargo.toml
zlorb-web/frontend/: package.json  vite.config.ts
zlorb-web/frontend/public/: 404.html
zlorb-web/frontend/src/: app.css  app.html
zlorb-web/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
zlorb-web/frontend/static/: robots.txt
zlorb-web/frontend/static/styles/: preflight.min.css
zlorb-web/src/: lib.rs  main.rs  template.rs
zlorb-web/templates/: index.html
zlorbrs-ctl/: Cargo.toml
zlorbrs-ctl/src/: main.rs
zlorbrs-ctl/src/utils/: daemon.rs  repo.rs
zlorbrs-lib/: Cargo.toml
zlorbrs-lib/src/: config.rs  error.rs  lib.rs  log.rs
zlorbrs-service/: Cargo.toml
zlorbrs-service/res/: config.toml
zlorbrs-service/src/: build_system_executor.rs  config_manager.rs  configuration.rs  directory_scanner.rs  main.rs  repo_processor.rs  service.rs  service_coordinator.rs
zlorbrs-service/src/build_system_executor/: mod.rs
(+3 files in other folders)
