[package]
name = "zlorb-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zlorb-lib = { path = "../zlorb-lib" }
zlorb-web = { path = "../zlorb-web" }
