[package]
name = "zlorb-web"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["fs"] }
zlorb-lib = { path = "../zlorb-lib" }
